# Cx_lang

./: .coderabbit.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
bench/: BASELINE.md  bench_arith_loop.cx  bench_array_loop.cx  bench_fib_iter.cx  bench_fib_rec.cx  bench_if_expr.cx  bench_str_concat.cx  bench_struct_loop.cx  bench_when_loop.cx  run_bench.ps1
daily_log/: 2026-03-29.md  2026-04-08.md  2026-04-10.md  2026-04-12.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-23.md  2026-04-27.md  2026-04-30.md  2026-05-03.md  2026-05-04.md  2026-05-06.md  2026-05-07.md  2026-05-09.md  2026-05-16.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md
docment/: ROADMAP.md
docs/: AGENT_OPERATING_DOCTRINE.md  known_issues.md
docs/backend/: cx_abi_v0.1.md  cx_backend_roadmap_v3_1.md  cx_eval_order.md  cx_jit_determinism.md  cx_jit_parity_checklist.md  cx_runtime_intrinsics_v0.1.md
docs/frontend/: ROADMAP.md
examples/: README.md  arrays_and_loops.cx  enums.cx  error_handling.cx  fibonacci.cx  fizzbuzz.cx  generics.cx  hello.cx  run_all.sh  structs_and_methods.cx  tbool_uncertainty.cx  when_match.cx
examples/audit/: AUDIT_REPORT.md  audit_01_impl_on_generic_struct.cx  audit_03_try_in_when_arm.cx  audit_04_method_returns_result.cx  audit_05_result_in_array.cx  audit_06_generic_func_with_result.cx  audit_07_when_value_in_binary.cx  audit_08_deeply_nested_copy_into.cx  audit_10_if_let_chain.cx  (+2 more)
src/: diff_harness.rs  main.rs
(+241 files in other folders)
