[package]
name = "Cx_0V"
version = "0.1.0"
edition = "2021"

[features]
default = []
jit = [
    "cranelift-codegen",
    "cranelift-frontend",
    "cranelift-module",
    "cranelift-jit",
    "cranelift-native",
]

[dependencies]
logos = "0.16.1"
chumsky = "0.10"
colored = "2"
cranelift-codegen = { version = "0.115", optional = true }
cranelift-frontend = { version = "0.115", optional = true }
cranelift-module = { version = "0.115", optional = true }
cranelift-jit = { version = "0.115", optional = true }
cranelift-native = { version = "0.115", optional = true }

[dev-dependencies]
wait-timeout = "0.2"
